Inicio de la base del sistema de Items(units, buildings,...)

--- a/FactorWar/FactorWar.csproj
+++ b/FactorWar/FactorWar.csproj
@@ -90,7 +90,11 @@
     <Compile Include="Assets\Code\GenericComponents\Debugger.cs" />
     <Compile Include="Assets\Code\GenericComponents\ReadOnlyAttribute.cs" />
     <Compile Include="Assets\Code\GenericComponents\SingletonComponent.cs" />
+    <Compile Include="Assets\Code\Items\IDamageable.cs" />
+    <Compile Include="Assets\Code\Items\IKillable.cs" />
+    <Compile Include="Assets\Code\Items\ISelectable.cs" />
     <Compile Include="Assets\Code\Items\Item.cs" />
+    <Compile Include="Assets\Code\Items\Unit.cs" />
     <Compile Include="Assets\Code\Map\Data.cs" />
     <Compile Include="Assets\Code\Map\Map.cs" />
     <Compile Include="Assets\Code\Map\MapBox.cs" />
