--- a/FactorWar/FactorWar.csproj
+++ b/FactorWar/FactorWar.csproj
@@ -84,17 +84,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Code\Entities\AnimatorManager.cs" />
+    <Compile Include="Assets\Code\Entities\Building.cs" />
+    <Compile Include="Assets\Code\Entities\Entity.cs" />
+    <Compile Include="Assets\Code\Entities\HasHealth.cs" />
+    <Compile Include="Assets\Code\Entities\IDamageable.cs" />
+    <Compile Include="Assets\Code\Entities\IKillable.cs" />
+    <Compile Include="Assets\Code\Entities\ISelectable.cs" />
+    <Compile Include="Assets\Code\Entities\Unit.cs" />
     <Compile Include="Assets\Code\EventManager.cs" />
     <Compile Include="Assets\Code\Events.cs" />
     <Compile Include="Assets\Code\GameManager.cs" />
     <Compile Include="Assets\Code\GenericComponents\Debugger.cs" />
     <Compile Include="Assets\Code\GenericComponents\ReadOnlyAttribute.cs" />
     <Compile Include="Assets\Code\GenericComponents\SingletonComponent.cs" />
-    <Compile Include="Assets\Code\Items\IDamageable.cs" />
-    <Compile Include="Assets\Code\Items\IKillable.cs" />
-    <Compile Include="Assets\Code\Items\ISelectable.cs" />
-    <Compile Include="Assets\Code\Items\Item.cs" />
-    <Compile Include="Assets\Code\Items\Unit.cs" />
     <Compile Include="Assets\Code\Map\Data.cs" />
     <Compile Include="Assets\Code\Map\Map.cs" />
     <Compile Include="Assets\Code\Map\MapBox.cs" />
