Sistema básico de cálculo de mapa hexagonal, implementado. Ahora hay que depurar el código, y basándose en el mismo crear clase específica para ello y objetos que guarden información para facilitar el mapa.

--- a/FactorWar/FactorWar.csproj
+++ b/FactorWar/FactorWar.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Assets\Code\GenericComponents\ReadOnlyAttribute.cs" />
     <Compile Include="Assets\Code\GenericComponents\SingletonComponent.cs" />
     <Compile Include="Assets\Code\Map\Data.cs" />
+    <Compile Include="Assets\Code\Map\HexMath.cs" />
     <Compile Include="Assets\Code\Map\Map.cs" />
     <Compile Include="Assets\Code\Map\MapBox.cs" />
     <Compile Include="Assets\Code\Map\MapBoxScript.cs" />
