Sigo trabajando en el mapa basado en hexágonos. Hay que revisar cálculos, pero al menos se ejecutan las funciones.

--- a/FactorWar/FactorWar.csproj
+++ b/FactorWar/FactorWar.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Assets\Code\GenericComponents\SingletonComponent.cs" />
     <Compile Include="Assets\Code\Map\Data.cs" />
     <Compile Include="Assets\Code\Map\HexMath.cs" />
+    <Compile Include="Assets\Code\Map\HexagonCell.cs" />
     <Compile Include="Assets\Code\Map\Map.cs" />
     <Compile Include="Assets\Code\Map\MapBox.cs" />
     <Compile Include="Assets\Code\Map\MapBoxScript.cs" />
