--- a/FactorWar/FactorWar.csproj
+++ b/FactorWar/FactorWar.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Assets\Code\Map\MapEnums.cs" />
     <Compile Include="Assets\Code\Map\Province.cs" />
     <Compile Include="Assets\Code\Map\Region.cs" />
+    <Compile Include="Assets\Code\Map\Regions\Provinces\Maps\Cells\MapBoxPrefabs.cs" />
     <Compile Include="Assets\Code\Player\PlayerController.cs" />
     <Compile Include="Assets\Code\StateMachine\CombatState.cs" />
     <Compile Include="Assets\Code\StateMachine\CombatStates\EndCombatState.cs" />
